# splint

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  result.json  setup.py  tox.ini
.github/workflows/: workflow.yaml
info/: tox.txt
src/: check_1.py  check_2.py  splint_it.py
src/cli/: check_1.py  check_2.py  cli_splint.py  result.json  splint_api.py  splint_it.py  splinter.py
src/splint/: README.md  __init__.py  rule_dataframe.py  rule_files.py  rule_fs.py  rule_pdf.py  rule_ping.py  rule_sqlachemy.py  rule_webapi.py  rule_xlsx.py  setup.py  splint_api.py  splint_attribute.py  splint_checker.py  splint_environment.py  splint_exception.py  splint_filter.py  splint_format.py  splint_function.py  splint_immutable.py  splint_inirc.py  splint_jsonrc.py  splint_module.py  splint_package.py  splint_rc.py  splint_rc_factory.py  splint_repo.py  splint_result.py  splint_ruid.py  splint_score.py  (+4 more)
test/: _test_groupby.py  test_attributes.py  test_builtin_rule.py  test_checker.py  test_dataframe.py  test_env_func.py  test_factory.py  test_format.py  test_function.py  test_function_return.py  test_groupby.py  test_immutable.py  test_inline_env_func.py  test_module.py  test_output.py  test_package.py  test_pre_post_sr_hooks.py  test_rc.py  test_rc_checker.py  test_repo.py  test_result.py  test_ruid.py  test_rule_dataframe.py  test_rule_file.py  test_rule_fs.py  test_rule_pdf.py  test_rule_ping.py  test_rule_sqlalchemy.py  test_rule_webapi.py  test_rule_xlsx.py  test_score.py  test_splint_env.py  test_suid.py  test_ttl.py  test_util.py  test_yielder.py
(+37 files in other folders)
