[tool.poetry]
name = "splint"
version = "0.1.0"
description = "Lint anything"
authors = ["Chuck Bass <chuck@acrocad.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10 || ~3.11 || ~3.12"
requests = "^2.32.3"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
coverage = "^7.6.1"
isort = "^5.13.2"
pylint = "^3.2.7"
setuptools = "^74.1.1"
tox = "^4.18.0"
mypi = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
demos = ["fastapi","streamlit","typer","requests"]
pdf = ["pypdf","PyPDF2"]
df = ["pandas","numpy"]

